--- a/Clase6Marzo/app/src/main/res/layout/activity_main.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_main.xml
@@ -31,11 +31,59 @@
                 android:textStyle="bold"
                 android:textColor="@color/primary"/>
 
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre"
+                android:textStyle="bold"/>
+
             <EditText
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                />
+
+            <TextView
                 android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edad"
+                android:textStyle="bold"/>
+
+            <EditText
+                android:id="@+id/etAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Altura"
+                android:textStyle="bold"/>
+
+            <EditText
+                android:id="@+id/etAltura"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Monedero"
+                android:textStyle="bold"/>
+
+            <EditText
+                android:id="@+id/etMonedero"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 />
 
             <RelativeLayout
@@ -68,12 +116,6 @@
                     android:layout_centerHorizontal="true"
                     />
             </RelativeLayout>
-
-
-
-
-
-
 
         </LinearLayout>
 
