--- a/Clase6Marzo/app/src/main/res/layout/activity_second.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_second.xml
@@ -5,84 +5,152 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#e2e8f0"
+    android:padding="16dp"
+    android:layout_marginBottom="16dp"
     tools:context=".SecondActivity">
+<!--
+  <ImageView
+      android:id="@+id/imageView"
+      android:layout_width="90dp"
+      android:layout_height="90dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/juego"/>
 
-  <LinearLayout
+  <TextView
+      android:id="@+id/txtTitle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Nombre del Juego"
+      android:layout_toStartOf="@id/imageView"
+      android:layout_marginLeft="16dp"
+      android:textSize="16dp"
+      android:textStyle="bold"
+      android:textColor="#3f3f46"
+      app:layout_constraintStart_toEndOf="@+id/imageView"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
+  <TextView
+      android:id="@+id/txtConsole"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="12dp"
+      android:layout_toEndOf="@id/imageView"
+      android:text="Consola"
+      android:textSize="14dp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toEndOf="@+id/imageView"
+      app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+
+  <TextView
+      android:id="@+id/txtPrice"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/txtTitle"
+      android:layout_marginStart="56dp"
+      android:layout_marginTop="12dp"
+      android:text="13000.00 MXN"
+      android:textColor="#0f172a"
+      android:textSize="14dp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.476"
+      app:layout_constraintStart_toEndOf="@+id/txtConsole"
+      app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+
+  <TextView
+      android:id="@+id/txtClasification"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="20dp"
+      android:text="ESRB"
+      android:textColor="@color/primary"
+      android:textSize="11dp"
+      app:layout_constraintStart_toEndOf="@+id/imageView"
+      app:layout_constraintTop_toBottomOf="@+id/txtConsole" />
+
+  <Button
+      android:id="@+id/btnBuy"
+      android:layout_width="110dp"
+      android:layout_height="42dp"
+      android:layout_marginStart="72dp"
+      android:backgroundTint="@color/primary"
+      android:text="Comprar"
+      app:layout_constraintStart_toEndOf="@+id/txtClasification"
+      app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
+      -->
+
+  <RelativeLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      android:background="#dbeafe"
-      android:paddingHorizontal="16dp"
-      >
+      android:layout_height="wrap_content"
+      android:background="#e2e8f0"
+      app:layout_constraintTop_toTopOf="parent"
+      tools:layout_editor_absoluteX="16dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:srcCompat="@drawable/juego" />
+
+    <TextView
+        android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#f8fafc"
-        android:paddingHorizontal="16dp"
-        android:paddingTop="16dp">
-      <RelativeLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:background="#e2e8f0"
-          android:padding="16dp">
+        android:layout_marginLeft="16dp"
+        android:layout_toEndOf="@id/imageView"
+        android:text="Nombre del Juego"
+        android:textColor="#3f3f46"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            app:srcCompat="@drawable/juego"/>
+    <TextView
+        android:id="@+id/txtConsole"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@id/imageView"
+        android:text="Consola"
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nombre del Juego"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_marginLeft="16dp"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:textColor="#3f3f46"/>
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="8dp"
+        android:text="130.00 MXN"
+        android:textColor="#0f172a"
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/txtConsole"
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Consola"
-            android:layout_marginLeft="16dp"
-            android:layout_toEndOf="@id/imageView"
-            android:layout_below="@id/txtTitle"
-            android:textSize="14dp"
-            android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/txtClasification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtConsole"
+        android:layout_alignLeft="@+id/txtConsole"
+        android:layout_marginTop="8dp"
+        android:text="ESRB"
+        android:textColor="@color/primary"
+        android:textSize="11dp" />
 
-        <TextView
-            android:id="@+id/txtPrice"
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="130.00 MXN"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/txtTitle"
-            android:textSize="14dp"
-            android:textStyle="bold"
-            android:textColor="#0f172a"/>
-
-        <Button
-            android:id="@+id/btnBuy"
-            android:layout_width="110dp"
-            android:layout_height="42dp"
-            android:text="Comprar"
-            android:backgroundTint="@color/primary"
-            android:layout_below="@id/txtPrice"
-            android:layout_alignParentRight="true"
-            />
-      </RelativeLayout>
-    </LinearLayout>
-
-
-
-  </LinearLayout>
+    <Button
+        android:id="@+id/btnBuy"
+        android:layout_width="110dp"
+        android:layout_height="42dp"
+        android:layout_below="@id/txtPrice"
+        android:layout_alignParentRight="true"
+        android:backgroundTint="@color/primary"
+        android:text="Comprar" />
+  </RelativeLayout>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
