--- a/Clase6Marzo/app/src/main/res/layout/activity_lista_de_juegos.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_lista_de_juegos.xml
@@ -1,31 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".ListaDeJuegos"
-    android:background="#dbeafe">
+    android:background="@color/bg">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/container"
+        android:padding="16dp"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lista de Juegos"
+            android:paddingVertical="16dp"
+            android:textAlignment="center"
+            android:textSize="23dp"
+            android:textStyle="bold"
+            android:textColor="@color/primary"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerVideojuegos"
+            tools:listitem="@layout/activity_second"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabPreferencias"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lista de Juegos"
-        android:paddingVertical="16dp"
-        android:textAlignment="center"
-        android:textSize="23dp"
-        android:textStyle="bold"
-        android:textColor="@color/primary"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:background="#f8fafc"
+        android:backgroundTint="#3BBBF6"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/setting"
+        android:contentDescription="Preferencias"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerVideojuegos"
-        tools:listitem="@layout/activity_second"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+
+
+
+
+</FrameLayout>
