--- a/EjemploSqlitekotlin/app/src/main/res/layout/activity_editar.xml
+++ b/EjemploSqlitekotlin/app/src/main/res/layout/activity_editar.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Editar Item"
+                android:text="Editar Videojuego"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textColor="#436eed"
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Ingrese el nombre del juego:" />
+                android:text="Nombre del Videojuego:" />
 
             <EditText
                 android:id="@+id/etJuego"
@@ -46,6 +46,21 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName" />
+
+            <TextView
+                android:id="@+id/tvClasificacion"
+                android:paddingTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="Clasificación:" />
+
+            <EditText
+                android:id="@+id/etClasificacion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text" />
 
             <TextView
                 android:paddingTop="16dp"
@@ -77,6 +92,7 @@
 
             <Button
                 android:id="@+id/bnGuardar"
+                android:backgroundTint="#436eed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Guardar"
